# flagpole

./: API.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  index.html  open_api.yaml  open_api.yml  rustfmt.toml
API/: README.md  delete_flag.yml  get_all_flags.yml  head_all_flags.yml  put_flag.yml
clients/: README.md
clients/kotlin/: FlagPoleClient.kt
example_requests/: .env  get_all_flags.yml  head_all_flags.yml  put_flag.yml
src/: api.rs  auth.rs  cfg.rs  db.rs  flag.rs  lib.rs  main.rs  namespace.rs  unstr.rs  value.rs
src/db/: db.rs  mem.rs  mod.rs  redis.rs
tests/: health_check.rs
