[package]
name = "flagpole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
lazy_static = "1.4.0"
regex = "1.6.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
gistdb = { path = "../gistdb" }
