[package]
name = "flagpole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.18", features = ["http1", "json", "tokio", "query"] }