[package]
name = "flagpole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.18", features = ["headers", "http1", "json", "tokio", "query"] }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11.8", optional = true }
clap = { version = "4.5.46", features = ["color", "derive", "help", "usage", "std", "env"] }
redis = { version = "0.32.5", features = [ "ahash", "aio", "tokio-comp" ] }

[features]
default = ["logging"]
logging = ["dep:log", "dep:env_logger"]
redis = []
